bucketslider/style.css
body {
	background: #2a2a2a;
	font-family: Raleway;
}

h1 {
    text-align: center;
    color:#fff;
    margin: 0;
}

h6 {
    text-align: center;
    color:#fff;
    margin: 0;
}

h5 {
    margin-top: 60px;
    text-align: center;
    color:#fff;
}

.bucket {
    margin: auto;
    margin-top: 50px;
    padding-bottom: 0%;
    height: 300px;
    width: 100px;
    display: table;
    position: relative;
    border-style: none solid solid solid;
    border-width: 10px;
    border-color: lightgray;
    border-radius: 10px;
}

.water {
    width: 100%;
    height: 10%;
    background-color: skyblue;
    position: absolute;
    bottom: 0;
}

#bucketplayer {
	width: 350px;
	height: 50px;
	position: relative;
	margin: 0 auto;
	top: 80px;
}

i {
    position: absolute;
    margin-top: -6px;
    color: #fff;
}

i.fa-volume-down {
    margin-left: -8px;
}

i.fa-volume-up {
    margin-right: -8px;
    right: 0;
}

#volume {
	position: absolute;
	left: 24px;
	margin: 0 auto;
	height: 5px;
	width: 300px;
	background: #555;
    border-radius: 15px;
}

#volume .ui-slider-range-min {
    height: 5px;
    width: 300px;
    position: absolute;
    background: skyblue;
    border: none;
    border-radius: 10px;
    outline: none;
}

#volume .ui-slider-handle {
    width: 20px;
    height: 20px;
    border-radius: 20px;
    background: #FFF;
    position: absolute;
    margin-left: -8px;
    margin-top: -8px;
    cursor: pointer;
    outline: none;
} 

